--- a/aws-eks-cloud-formation.yaml
+++ b/aws-eks-cloud-formation.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Full EKS Cluster for jenkins-argo with VPC, subnets, IGW, NAT, SG, and Node Group
+Description: Full EKS Cluster for jenkins-argo with VPC, subnets, IGW, NAT, SG, EKS cluster, and Node Group
 
 Parameters:
   KeyName:
@@ -7,246 +7,493 @@ Parameters:
     Type: AWS::EC2::KeyPair::KeyName
 
 Resources:
+  # ================================
+  # VPC
+  # ================================
+  JenkinsArgoVPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: 10.0.0.0/16
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-vpc
 
-# ================================
-# VPC
-# ================================
-JenkinsArgoVPC:
-  Type: AWS::EC2::VPC
-  Properties:
-    CidrBlock: 10.0.0.0/16
-    EnableDnsSupport: true
-    EnableDnsHostnames: true
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-vpc
+  # ================================
+  # Public Subnets
+  # ================================
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      CidrBlock: 10.0.1.0/24
+      AvailabilityZone: ap-south-1a
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-public-1
 
-# ================================
-# Public Subnets
-# ================================
-PublicSubnet1:
-  Type: AWS::EC2::Subnet
-  Properties:
-    VpcId: !Ref JenkinsArgoVPC
-    CidrBlock: 10.0.1.0/24
-    AvailabilityZone: ap-south-1a
-    MapPublicIpOnLaunch: true
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-public-1
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      CidrBlock: 10.0.2.0/24
+      AvailabilityZone: ap-south-1b
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-public-2
 
-PublicSubnet2:
-  Type: AWS::EC2::Subnet
-  Properties:
-    VpcId: !Ref JenkinsArgoVPC
-    CidrBlock: 10.0.2.0/24
-    AvailabilityZone: ap-south-1b
-    MapPublicIpOnLaunch: true
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-public-2
+  # ================================
+  # Private Subnets
+  # ================================
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      CidrBlock: 10.0.10.0/24
+      AvailabilityZone: ap-south-1a
+      MapPublicIpOnLaunch: false
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-private-1
 
-# ================================
-# Private Subnets
-# ================================
-PrivateSubnet1:
-  Type: AWS::EC2::Subnet
-  Properties:
-    VpcId: !Ref JenkinsArgoVPC
-    CidrBlock: 10.0.10.0/24
-    AvailabilityZone: ap-south-1a
-    MapPublicIpOnLaunch: false
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-private-1
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      CidrBlock: 10.0.11.0/24
+      AvailabilityZone: ap-south-1b
+      MapPublicIpOnLaunch: false
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-private-2
 
-PrivateSubnet2:
-  Type: AWS::EC2::Subnet
-  Properties:
-    VpcId: !Ref JenkinsArgoVPC
-    CidrBlock: 10.0.11.0/24
-    AvailabilityZone: ap-south-1b
-    MapPublicIpOnLaunch: false
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-private-2
+  # ================================
+  # Internet Gateway
+  # ================================
+  JenkinsArgoIGW:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-igw
 
-# ================================
-# Internet Gateway
-# ================================
-JenkinsArgoIGW:
-  Type: AWS::EC2::InternetGateway
-  Properties:
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-igw
+  AttachIGW:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      InternetGatewayId: !Ref JenkinsArgoIGW
 
-AttachIGW:
-  Type: AWS::EC2::VPCGatewayAttachment
-  Properties:
-    VpcId: !Ref JenkinsArgoVPC
-    InternetGatewayId: !Ref JenkinsArgoIGW
+  # ================================
+  # NAT Gateway for Private Subnets
+  # ================================
+  EIPNAT:
+    Type: AWS::EC2::EIP
+    DependsOn: AttachIGW
+    Properties:
+      Domain: vpc
 
-# ================================
-# NAT Gateway for Private Subnets
-# ================================
-EIPNAT:
-  Type: AWS::EC2::EIP
-  DependsOn: AttachIGW
-  Properties:
-    Domain: vpc
+  NATGateway:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt EIPNAT.AllocationId
+      SubnetId: !Ref PublicSubnet1
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-nat
 
-NATGateway:
-  Type: AWS::EC2::NatGateway
-  Properties:
-    AllocationId: !GetAtt EIPNAT.AllocationId
-    SubnetId: !Ref PublicSubnet1
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-nat
+  # ================================
+  # Route Tables
+  # ================================
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-public-rt
 
-# ================================
-# Route Tables
-# ================================
-PublicRouteTable:
-  Type: AWS::EC2::RouteTable
-  Properties:
-    VpcId: !Ref JenkinsArgoVPC
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-public-rt
+  PublicRoute:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref JenkinsArgoIGW
 
-PublicRoute:
-  Type: AWS::EC2::Route
-  Properties:
-    RouteTableId: !Ref PublicRouteTable
-    DestinationCidrBlock: 0.0.0.0/0
-    GatewayId: !Ref JenkinsArgoIGW
+  PublicSubnet1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet1
+      RouteTableId: !Ref PublicRouteTable
 
-PublicSubnet1RouteTableAssociation:
-  Type: AWS::EC2::SubnetRouteTableAssociation
-  Properties:
-    SubnetId: !Ref PublicSubnet1
-    RouteTableId: !Ref PublicRouteTable
+  PublicSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet2
+      RouteTableId: !Ref PublicRouteTable
 
-PublicSubnet2RouteTableAssociation:
-  Type: AWS::EC2::SubnetRouteTableAssociation
-  Properties:
-    SubnetId: !Ref PublicSubnet2
-    RouteTableId: !Ref PublicRouteTable
+  PrivateRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-private-rt
 
-PrivateRouteTable:
-  Type: AWS::EC2::RouteTable
-  Properties:
-    VpcId: !Ref JenkinsArgoVPC
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-private-rt
+  PrivateRoute:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NATGateway
 
-PrivateRoute:
-  Type: AWS::EC2::Route
-  Properties:
-    RouteTableId: !Ref PrivateRouteTable
-    DestinationCidrBlock: 0.0.0.0/0
-    NatGatewayId: !Ref NATGateway
+  PrivateSubnet1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet1
+      RouteTableId: !Ref PrivateRouteTable
 
-PrivateSubnet1RouteTableAssociation:
-  Type: AWS::EC2::SubnetRouteTableAssociation
-  Properties:
-    SubnetId: !Ref PrivateSubnet1
-    RouteTableId: !Ref PrivateRouteTable
+  PrivateSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet2
+      RouteTableId: !Ref PrivateRouteTable
 
-PrivateSubnet2RouteTableAssociation:
-  Type: AWS::EC2::SubnetRouteTableAssociation
-  Properties:
-    SubnetId: !Ref PrivateSubnet2
-    RouteTableId: !Ref PrivateRouteTable
+  # ================================
+  # Security Group
+  # ================================
+  JenkinsArgoSG:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: EKS SG
+      VpcId: !Ref JenkinsArgoVPC
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-sg
 
-# ================================
-# Security Group
-# ================================
-JenkinsArgoSG:
-  Type: AWS::EC2::SecurityGroup
-  Properties:
-    GroupDescription: EKS SG
-    VpcId: !Ref JenkinsArgoVPC
-    Tags:
-      - Key: Name
-        Value: jenkins-argo-sg
+  # ================================
+  # IAM Roles
+  # ================================
+  JenkinsArgoEKSRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: jenkins-argo-eks-role
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - eks.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
 
-# ================================
-# IAM Roles
-# ================================
-JenkinsArgoEKSRole:
-  Type: AWS::IAM::Role
-  Properties:
-    RoleName: jenkins-argo-eks-role
-    AssumeRolePolicyDocument:
-      Version: '2012-10-17'
-      Statement:
-        - Effect: Allow
-          Principal:
-            Service:
-              - eks.amazonaws.com
-          Action:
-            - sts:AssumeRole
-    ManagedPolicyArns:
-      - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
+  JenkinsArgoNodeRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: jenkins-argo-node-role
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
+        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
+        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
 
-JenkinsArgoNodeRole:
-  Type: AWS::IAM::Role
-  Properties:
-    RoleName: jenkins-argo-node-role
-    AssumeRolePolicyDocument:
-      Version: '2012-10-17'
-      Statement:
-        - Effect: Allow
-          Principal:
-            Service:
-              - ec2.amazonaws.com
-          Action:
-            - sts:AssumeRole
-    ManagedPolicyArns:
-      - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
-      - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
-      - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
+  # ================================
+  # EKS Cluster
+  # ================================
+  JenkinsArgoEKSCluster:
+    Type: AWS::EKS::Cluster
+    Properties:
+      Name: jenkins-argo-eks-cluster
+      RoleArn: !GetAtt JenkinsArgoEKSRole.Arn
+      ResourcesVpcConfig:
+        SubnetIds:
+          - !Ref PublicSubnet1
+          - !Ref PublicSubnet2
+          - !Ref PrivateSubnet1
+          - !Ref PrivateSubnet2
+        SecurityGroupIds:
+          - !Ref JenkinsArgoSG
 
-# ================================
-# EKS Cluster
-# ================================
-JenkinsArgoEKSCluster:
-  Type: AWS::EKS::Cluster
-  Properties:
-    Name: jenkins-argo-eks-cluster
-    RoleArn: !GetAtt JenkinsArgoEKSRole.Arn
-    ResourcesVpcConfig:
-      SubnetIds:
+  # ================================
+  # Managed Node Group
+  # ================================
+  JenkinsArgoNodeGroup:
+    Type: AWS::EKS::Nodegroup
+    Properties:
+      ClusterName: jenkins-argo-eks-cluster
+      NodeRole: !GetAtt JenkinsArgoNodeRole.Arn
+      Subnets:
         - !Ref PublicSubnet1
         - !Ref PublicSubnet2
         - !Ref PrivateSubnet1
         - !Ref PrivateSubnet2
-      SecurityGroupIds:
-        - !Ref JenkinsArgoSG
+      ScalingConfig:
+        MinSize: 1
+        MaxSize: 2
+        DesiredSize: 2
+      InstanceTypes:
+        - m7i-flex.large
+      NodegroupName: jenkins-argo-nodegroup
+      RemoteAccess:
+        Ec2SshKey: jenkins-argo
+Parameters:
+  KeyName:
+    Description: Name of an existing EC2 KeyPair for SSH access to nodes
+    Type: AWS::EC2::KeyPair::KeyName
 
-# ================================
-# Managed Node Group
-# ================================
-JenkinsArgoNodeGroup:
-  Type: AWS::EKS::Nodegroup
-  Properties:
-    ClusterName: jenkins-argo-eks-cluster
-    NodeRole: !GetAtt JenkinsArgoNodeRole.Arn
-    Subnets:
-      - !Ref PublicSubnet1
-      - !Ref PublicSubnet2
-      - !Ref PrivateSubnet1
-      - !Ref PrivateSubnet2
-    ScalingConfig:
-      MinSize: 1
-      MaxSize: 2        # Changed max to 2
-      DesiredSize: 2
-    InstanceTypes:
-      - m7i-flex.large  # Updated instance type
-    NodegroupName: jenkins-argo-nodegroup
-    RemoteAccess:
-      Ec2SshKey: !Ref KeyName
+Resources:
+  # ================================
+  # VPC
+  # ================================
+  JenkinsArgoVPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: 10.0.0.0/16
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-vpc
+
+  # ================================
+  # Public Subnets
+  # ================================
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      CidrBlock: 10.0.1.0/24
+      AvailabilityZone: ap-south-1a
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-public-1
+
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      CidrBlock: 10.0.2.0/24
+      AvailabilityZone: ap-south-1b
+      MapPublicIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-public-2
+
+  # ================================
+  # Private Subnets
+  # ================================
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      CidrBlock: 10.0.10.0/24
+      AvailabilityZone: ap-south-1a
+      MapPublicIpOnLaunch: false
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-private-1
+
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      CidrBlock: 10.0.11.0/24
+      AvailabilityZone: ap-south-1b
+      MapPublicIpOnLaunch: false
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-private-2
+
+  # ================================
+  # Internet Gateway
+  # ================================
+  JenkinsArgoIGW:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-igw
+
+  AttachIGW:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      InternetGatewayId: !Ref JenkinsArgoIGW
+
+  # ================================
+  # NAT Gateway for Private Subnets
+  # ================================
+  EIPNAT:
+    Type: AWS::EC2::EIP
+    DependsOn: AttachIGW
+    Properties:
+      Domain: vpc
+
+  NATGateway:
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt EIPNAT.AllocationId
+      SubnetId: !Ref PublicSubnet1
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-nat
+
+  # ================================
+  # Route Tables
+  # ================================
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-public-rt
+
+  PublicRoute:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref JenkinsArgoIGW
+
+  PublicSubnet1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet1
+      RouteTableId: !Ref PublicRouteTable
+
+  PublicSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PublicSubnet2
+      RouteTableId: !Ref PublicRouteTable
+
+  PrivateRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref JenkinsArgoVPC
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-private-rt
+
+  PrivateRoute:
+    Type: AWS::EC2::Route
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NATGateway
+
+  PrivateSubnet1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet1
+      RouteTableId: !Ref PrivateRouteTable
+
+  PrivateSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet2
+      RouteTableId: !Ref PrivateRouteTable
+
+  # ================================
+  # Security Group
+  # ================================
+  JenkinsArgoSG:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: EKS SG
+      VpcId: !Ref JenkinsArgoVPC
+      Tags:
+        - Key: Name
+          Value: jenkins-argo-sg
+
+  # ================================
+  # IAM Roles
+  # ================================
+  JenkinsArgoEKSRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: jenkins-argo-eks-role
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - eks.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
+
+  JenkinsArgoNodeRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: jenkins-argo-node-role
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
+        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
+        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
+
+  # ================================
+  # EKS Cluster
+  # ================================
+  JenkinsArgoEKSCluster:
+    Type: AWS::EKS::Cluster
+    Properties:
+      Name: jenkins-argo-eks-cluster
+      RoleArn: !GetAtt JenkinsArgoEKSRole.Arn
+      ResourcesVpcConfig:
+        SubnetIds:
+          - !Ref PublicSubnet1
+          - !Ref PublicSubnet2
+          - !Ref PrivateSubnet1
+          - !Ref PrivateSubnet2
+        SecurityGroupIds:
+          - !Ref JenkinsArgoSG
+
+  # ================================
+  # Managed Node Group
+  # ================================
+  JenkinsArgoNodeGroup:
+    Type: AWS::EKS::Nodegroup
+    Properties:
+      ClusterName: jenkins-argo-eks-cluster
+      NodeRole: !GetAtt JenkinsArgoNodeRole.Arn
+      Subnets:
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
+        - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
+      ScalingConfig:
+        MinSize: 1
+        MaxSize: 2
+        DesiredSize: 2
+      InstanceTypes:
+        - m7i-flex.large
+      NodegroupName: jenkins-argo-nodegroup
+      RemoteAccess:
+        Ec2SshKey: jenkins-argo
